@@ -43,7 +43,7 @@
 #define TIEMU_REQUIRES_LIBCONV_VERSION		"0.0.1"
 #define TIEMU_REQUIRES_LIBFILES_VERSION		"0.0.9"
 #define TIEMU_REQUIRES_LIBCABLES_VERSION	"0.0.1"
-#define TIEMU_REQUIRES_LIBCALCS_VERSION 	"0.0.1"
+#define TIEMU_REQUIRES_LIBCALCS_VERSION 	"0.1.0"
 
 #endif
 
